Improved trace proximity calculation to avoid showing false positives